# fanout

./: .gitignore  README.md  demo.py  install.sh  pyproject.toml  tldr.py
.claude/skills/: fanout.md  setup.md
assets/: launch_workflow.excalidraw  sampling_workflow.excalidraw
benchmarks/: README.md
benchmarks/cifar10-weightgen/: README.md  eval.py  run_benchmark.py
benchmarks/cifar10-weightgen/tasks/: generate_cnn_medium.py  generate_cnn_small.py  generate_linear_only.py
benchmarks/codeevolve/: README.md  eval.py  eval.sh  plot_results.py  plot_solutions.py  run_benchmark.py
benchmarks/codeevolve/tasks/: circle_packing.py  first_autocorr.py  heilbronn_triangle.py  kissing_number.py
benchmarks/kernelbench/: README.md  eval.py  eval.sh  run_benchmark.py
benchmarks/kernelbench/tasks/: conv2d.py  layernorm.py  matmul.py  relu.py  (+1 more)
benchmarks/minif2f/: README.md  eval.py  eval.sh  run_benchmark.py
benchmarks/mnist-weights/: README.md  eval.py  plot_results.py  plot_solutions.py  run_benchmark.py
benchmarks/molopt/: README.md  eval.py  plot_results.py  plot_solutions.py  run_benchmark.py
benchmarks/pde-solvers/: README.md  animate_solutions.py  eval.py  plot_results.py  run_benchmark.py
src/fanout/: __init__.py  agent_tools.py  channel.py  cli.py  evaluate.py  exceptions.py  launch.py  model_sets.py  reflect.py  report.py  sample.py  select.py  solution_format.py  store.py  workflow.py
tests/: test_channel.py  test_epsilon_greedy.py  test_eval_cache.py  test_launch.py  test_pareto.py  test_reflect.py  test_solution_format.py  test_workflow.py
(+58 files in other folders)
