[project]
name = "fanout"
version = "0.1.0"
description = "Sample multiple LLMs, evaluate outputs, and iteratively select the best solutions"
readme = "README.md"
authors = [
    { name = "Pablo Cordero", email = "dimenwarper@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "typer>=0.9.0",
    "pydantic>=2.0",
    "httpx>=0.27",
    "rich>=13.0",
    "python-dotenv>=1.0",
]

[project.scripts]
fanout = "fanout.cli:app"

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"
